add tests and update readme file